fix: specify font style to prevent VRT failure

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,8 +1,10 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
+
 <script
   async
   src="https://www.googletagmanager.com/gtag/js?id=G-N4L5FXTFWX"
 ></script>
+
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag() {
@@ -12,3 +14,13 @@
 
   gtag('config', 'G-N4L5FXTFWX');
 </script>
+
+<!-- font setting (to prevent failure of VRT test) -->
+
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+  }
+</style>
+
